[package]
name = "web"
version = "0.1.0"
authors = ["Kyando_2 <amehikoji@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.structures]
git = "https://github.com/Lucerna-Lang/Structures"

[dependencies.liber]
git = "https://github.com/Lucerna-Lang/Liber"

[dependencies.reqwest]
version = "0.11.3"
features = ["blocking"]